added instructions to run in readme