@@ -1,1 +1,6 @@
 # ForcedCensor
+<pre>
+To run pack it as a jar 
+Run following commands in the same directory: 
+export PATH_TO_FX=~/javafx-sdk-11.0.2/lib
+java -jar --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml ForcedCensor.jar
